Update the static pages for checkout

--- a/pkg/checkout/static/html/cancel.html
+++ b/pkg/checkout/static/html/cancel.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Stripe Checkout Sample</title>
-    <meta name="description" content="A demo of Stripe Payment Intents" />
+    <title>Stripe Checkout</title>
+    <meta name="description" content="A demo of Stripe Checkout" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/css/normalize.css" />
@@ -19,51 +19,10 @@
         </header>
         <div class="sr-payment-summary completed-view">
           <h1>Your test payment was canceled</h1>
-          <h4>Checkout Session ID: <span id="session"></span></h4>
+          <h4>Checkout Session ID: <span id="session">{{.SessionID}}</span></h4>
         </div>
       <div class="sr-content">
-        <div class="pasha-image-stack">
-          <img
-            src="https://picsum.photos/280/320?random=1"
-            width="140"
-            height="160"
-          />
-          <img
-            src="https://picsum.photos/280/320?random=2"
-            width="140"
-            height="160"
-          />
-          <img
-            src="https://picsum.photos/280/320?random=3"
-            width="140"
-            height="160"
-          />
-          <img
-            src="https://picsum.photos/280/320?random=4"
-            width="140"
-            height="160"
-          />
-        </div>
       </div>
     </div>
-    <script>
-      // Replace with your own publishable key: https://dashboard.stripe.com/test/apikeys
-      var PUBLISHABLE_KEY = "pk_1234";
-
-      if (PUBLISHABLE_KEY === "pk_1234") {
-        console.log(
-          "Replace the hardcoded publishable key with your own publishable key: https://dashboard.stripe.com/test/apikeys"
-        );
-      }
-
-      var stripe = Stripe(PUBLISHABLE_KEY);
-      var urlParams = new URLSearchParams(window.location.search);
-
-      if (urlParams.has("session_id")) {
-        document.getElementById("session").textContent = urlParams.get(
-          "session_id"
-        );
-      }
-    </script>
   </body>
 </html>
