--- a/pkg/checkout/static/html/redirect.html
+++ b/pkg/checkout/static/html/redirect.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <title>Stripe Checkout</title>
+    <meta name="description" content="A demo of Stripe Checkout" />
     <script src="https://js.stripe.com/v3/"></script>
     <script>
       var stripe = Stripe('{{.PublishableKey}}');
