--- a/pkg/checkout/static/html/success.html
+++ b/pkg/checkout/static/html/success.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Stripe Checkout Sample</title>
-    <meta name="description" content="A demo of Stripe Payment Intents" />
+    <title>Stripe Checkout</title>
+    <meta name="description" content="A demo of Stripe Checkout" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/css/normalize.css" />
@@ -19,51 +19,35 @@
         </header>
         <div class="sr-payment-summary completed-view">
           <h1>Your test payment succeeded</h1>
-          <h4>Checkout Session ID: <span id="session"></span></h4>
+          <h4>Checkout Session ID: <span id="session">{{.SessionID}}</span></h4>
         </div>
       <div class="sr-content">
-        <div class="pasha-image-stack">
-          <img
-            src="https://picsum.photos/280/320?random=1"
-            width="140"
-            height="160"
-          />
-          <img
-            src="https://picsum.photos/280/320?random=2"
-            width="140"
-            height="160"
-          />
-          <img
-            src="https://picsum.photos/280/320?random=3"
-            width="140"
-            height="160"
-          />
-          <img
-            src="https://picsum.photos/280/320?random=4"
-            width="140"
-            height="160"
-          />
-        </div>
+        <h1>Next steps:</h1>
+        <ul>
+          <li>
+            <p>Create a custom checkout session <a href="https://stripe.com/docs/api/checkout/sessions/create?lang=cli">with the CLI:</a></p>
+            <pre>$ stripe checkout sessions create \
+    --success-url="https://example.com/success" \
+    --cancel-url="https://example.com/cancel" \
+    -d "payment_method_types[]"=card \
+    -d "line_items[0][name]"="Stripe Press" \
+    -d "line_items[0][description]"="Get Together" \
+    -d "line_items[0][amount]"=2300 \
+    -d "line_items[0][currency]"=usd \
+    -d "line_items[0][quantity]"=2 \
+  | stripe-dev checkout run</pre>
+          </li>
+          <li><p>Clone one of our checkout samples with the CLI to see more indepth use cases: <a href="https://github.com/stripe-samples/checkout-one-time-payments">checkout-one-time-payments</a>, <a href="https://github.com/stripe-samples/checkout-single-subscription">checkout-single-subscription</a>, <a href="https://github.com/stripe-samples/checkout-subscription-and-add-on">checkout-subscription-and-add-on</a>, and <a href="https://github.com/stripe-samples/checkout-with-multiple-locales">checkout-with-multiple-locales</a></p></li>
+          <li><p>Make sure to configure a webhooks endpoint for <span class="code">checkout.session.completed</span> and use that to a completed payment.</p></li>
+        </ul>
+
+        <h1>More reading:</h1>
+        <ul>
+          <li><a href="https://stripe.com/docs/payments/checkout">Stripe Checkout documentation</a></li>
+          <li><a href="https://stripe.com/docs/webhooks">Receiving webhooks</a></li>
+          <li><a href="https://stripe.com/docs/stripe-cli">Using the Stripe CLI</a></li>
+        </ul>
       </div>
     </div>
-    <script>
-      // Replace with your own publishable key: https://dashboard.stripe.com/test/apikeys
-      var PUBLISHABLE_KEY = "pk_1234";
-
-      if (PUBLISHABLE_KEY === "pk_1234") {
-        console.log(
-          "Replace the hardcoded publishable key with your own publishable key: https://dashboard.stripe.com/test/apikeys"
-        );
-      }
-
-      var stripe = Stripe(PUBLISHABLE_KEY);
-      var urlParams = new URLSearchParams(window.location.search);
-
-      if (urlParams.has("session_id")) {
-        document.getElementById("session").textContent = urlParams.get(
-          "session_id"
-        );
-      }
-    </script>
   </body>
 </html>
