--- a/pkg/checkout/static/html/success.html
+++ b/pkg/checkout/static/html/success.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A demo of Stripe Checkout" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/normalize.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="/static/css/global.css" />
     <script src="https://js.stripe.com/v3/"></script>
   </head>
